# DoubleHelix-Plugin-Template

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: python-publish-test.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml
{{cookiecutter.project_slug}}/test/: test_{{cookiecutter.project_slug}}.py
