[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "doublehelix-{{cookiecutter.project_slug}}"
description = "{{cookiecutter.description}}"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
keywords = ["bioinformatics", "genetics", "wgs", "microarray", "science"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "setuptools",
]

[project.urls]
Documentation = "{{cookiecutter.documentation}}"
homepage = "{{cookiecutter.website}}"
Repository = "{{cookiecutter.repository}}"
Issues = "{{cookiecutter.repository}}/issues"
Changelog = "{{cookiecutter.repository}}/releases"

[tool.setuptools.packages.find]
include = ["helix.plugins.{{cookiecutter.project_slug}}"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "helix/plugins/{{cookiecutter.project_slug}}/VERSION.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers -p no:warnings --no-header"
testpaths = [
    "test"
]
filterwarnings = [
    'ignore:DeprecationWarning',
]
